added second line from github editor

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Hello World!</h1>
         <p>This is my first file in my new Git Repo.</p>
+        <p>This is my second line added from github editor.</p>
     </body>
 </html>
