--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>Hello World!</h1>
         <p>This is my first file in my new Git Repo.</p>
         <p>This is my second line added from github editor.</p>
+        <p>This is my third line added form github editor.</p>
     </body>
 </html>
