added line four from local machine

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <p>This is my first file in my new Git Repo.</p>
         <p>This is my second line added from github editor.</p>
         <p>This is my third line added form github editor.</p>
+        <p>This is line four added from my local machine.</p>
     </body>
 </html>
